--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+html, 
+body {
+  height: 100%;
+  margin: 0%
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
