BD consistent. All rows have their linkedin links associated

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -21,6 +21,10 @@
     top: 180px;
     left: 20px;
 }
+.btnPutLinksDB{
+    top: 210px;
+    left: 20px;
+}
 
 .fileInput{
     position: absolute;
