--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -49,7 +49,18 @@
 .clusterRectangle {
     background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid black;
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
     border-radius: 5px;
     z-index: 999; /* Ensure it's above the map */
+}
+
+.link {
+    color: black;
+    text-decoration: none;
+}
+
+.list-alumni {
+    list-style-type: none;
+    padding: 0;
 }
