--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,22 +9,34 @@
     z-index: 2;
 }
 
-.butnUplFile{
+.butnPopAlumni{
     top: 120px;
     left: 20px;
 }
-.butnUplFileBackup{
+.butnBackAlumni{
     top: 150px;
     left: 20px;
 }
-.butnAlumniBackup{
+.butnBackAlumniWFile{
     top: 180px;
     left: 20px;
 }
-.butnAlmWithoutLink{
+.btnMissingLinkedinLinks{
     top: 210px;
     left: 20px;
 }
+
+
+.butnPopCountry{
+    top: 270px;
+    left: 20px;
+}
+.butnPopCity{
+    top: 300px;
+    left: 20px;
+}
+
+
 .btnPutLinksDB{
     top: 240px;
     left: 20px;
