--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,15 @@
+.menu-buttons-container {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    background-color: rgba(255, 255, 255, 0.5); 
+    padding-top: 0px;
+    padding-left: 10px; 
+    padding-right: 10px;
+    padding-bottom: 10px;
+    border-radius: 5px;
+    z-index: 3;
+}
 
 .mapCmpDiv{
     height: 100vh;
