better up interface

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -80,29 +80,36 @@
     box-shadow: none; 
     padding: 5px; 
     outline: none; 
-    margin-top: 10px;
     width: 95%;
 }
 
-.search-bar-alumni {
-    margin-top: 10px;
-}
-
 .filter-course-alumni {
-    margin-top: 11px;
+    width: 100%;
+    margin-bottom: 10px;
 }
 
 .year-filter-container {
     display: flex;
+    margin-bottom: 10px;
 }
 
 .search-container-year {
-    width: 46%;
+    width: 50%;
     display: inline-block;
 }
 
-.search-container-to-year {
-    margin-left: 20px;
+.filter-year-to-alumni {
+    margin-left: 5px;
+}
+
+.search-bar-alumni {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.text-distribution {
+    margin-bottom: 0px;
+    padding-left: 6px;
 }
 
 .fileInput{
