--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,8 @@
+p {
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
 .menu-buttons-container {
     position: absolute;
     top: 20px;
@@ -198,7 +203,12 @@
 
   
 .my-button-clean:hover {
-background: linear-gradient(135deg, #000dff, #6b73ff); 
-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3); 
-transform: translateY(-2px); 
+    background: linear-gradient(135deg, #000dff, #6b73ff); 
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3); 
+    transform: translateY(-2px); 
+}
+
+.feedback-links {
+    color: black;
+    margin-right: 10px;
 }
