--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -62,6 +62,13 @@ p {
 
 /*---- Menu Buttons ----*/
 
+.icon-show-menu{
+    color: #A02D20; 
+    font-size: 25px;
+    padding-right: 3px;
+    cursor: pointer;
+}
+
 .menu-buttons-container {
     position: absolute;
     top: 20px;
@@ -76,7 +83,7 @@ p {
 }
 
 .text-distribution {
-    margin-top: 20px;
+    margin-top: 5px;
     padding-left: 3px;
 }
 
@@ -266,7 +273,7 @@ p {
 }
 
 .icon-apply{
-    color: #A02D20;
+    color: #A02D20; 
     font-size: 15px;
     padding-right: 3px;
     cursor: pointer;
