--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,8 +28,7 @@ p {
     margin: 0px;
 }
 
-/*---- Admin ----*/
-
+/*---- Admin: Login ----*/
 .content-container{
     display: flex;
     align-items: flex-start;
@@ -140,6 +139,102 @@ p {
 
 .app-button__welcome:hover {
     outline: 0px;
+}
+
+/*---- Admin: main page ----*/
+
+.admin-wrapper{
+    display: flex;
+    flex-direction: column;
+}
+
+.row-admin-title{
+}
+
+.row-admin-menu{
+    padding-top: 20px;
+}
+
+.input-row {
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.input-label {
+    width: 150px;
+    margin-right: 10px;
+    font-size: 16px;
+    text-align: left;
+}
+
+.input-field {
+    flex: 1;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.insert-file{
+    display: none;
+}
+
+.upload-icon{
+    cursor: pointer;
+    border: 3px solid #ccc;
+    border-radius: 4px;
+    width: 250px;
+    padding: 10px;
+    background-color: white;
+    color: #5d5d5a;
+    display: flex;
+    align-items: center;
+}
+
+.input-pass-admin{
+    border: 3px solid #ccc;
+    border-radius: 4px;
+    width: 150px;
+    padding: 10px;
+    background-color: white;
+    color: #969695;
+}
+
+.file-name-admin-wrapp{
+    margin-left: 5px;
+    max-width: 250px;
+    word-wrap: break-word;
+    white-space: normal;    
+}
+
+.upload-file-admin{
+    margin-right: 10px;
+}
+
+.admin-button {
+    background-color: #515150;
+    border: none;
+    border-radius: 10px; 
+    color: white;
+    padding: 5px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.3s ease; 
+    height: 40px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.admin-button:hover {
+    background-color: #A02D20;
+}
+
+.buttons-alumnus{
+    display: flex;
+    flex-direction: column;
 }
 
 
