--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -346,7 +346,7 @@ p {
 }
 
 .search-bar {
-    width: 95%;
+    width: 100%;
     height: 40px;
     border: 1px solid #CACAC9;
     border-radius: 5px; 
@@ -369,6 +369,8 @@ p {
 .search-bar-alumni {
     margin-top: 20px;
     margin-bottom: 10px;
+    width: 94%;
+
 }
 
 .dropdown-search-names {
@@ -455,11 +457,13 @@ p {
 .year-filter-container {
     display: flex;
     margin-bottom: 10px;
+    background-color: red;
 }
 
 .search-container-year {
-    width: 50%;
+    width: 100%;
     display: inline-block;
+    background-color: pink;
 }
 
 .fileInput{
