--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -299,9 +299,14 @@ p {
     padding-left: 3px;
 }
 
+.text-conclusion-search{
+    padding-bottom: 5px;
+    margin-top: 15px;
+}
+
 .text-conclusion-year {
     padding-bottom: 5px;
-    margin-top: 10px;
+    margin-top: 8px;
 }
 
 .custom-radio{
