--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -730,3 +730,64 @@ p {
 .logos{
     margin-top: 5px;
 }
+
+/*----------- Warning -----------*/
+.warning-icon {
+    padding-right: 2%;
+}
+
+.warning-title {
+    color: #2E231D;
+    padding: 0;
+    margin: 0;
+}
+
+.warning-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.warning-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    width: 30%;
+}
+
+.warning-button {
+    padding: 10px 20px;
+    margin: 0 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
+}
+
+.warning-button:first-of-type {
+    background-color: #4CAF50; /* Green color */
+    color: white;
+}
+
+.warning-button:last-of-type {
+    background-color: #f44336; /* Red color */
+    color: white;
+}
+
+.warning-button:hover {
+    opacity: 0.8;
+}
+
+.message {
+    padding-top: 5px;
+    padding-bottom: 14px;
+}
