--- a/app/src/app/app.css
+++ b/app/src/app/app.css
@@ -374,24 +374,28 @@ p {
 
 /*---- Menu Buttons ----*/
 
-.icon-show-menu{
-    color: #A02D20; 
-    font-size: 25px;
-    padding-right: 3px;
-    cursor: pointer;
-}
-
 .menu-buttons-container {
     position: absolute;
     top: 20px;
     left: 20px;
-    background-color: #EDEDEC; 
-    padding-top: 0px;
-    padding-left: 10px; 
-    padding-right: 10px;
-    padding-bottom: 10px;
-    border-radius: 5px;
-    z-index: 3;
+    z-index: 20;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.button-group {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.icon-show-menu {
+    cursor: pointer;
+    background: white;
+    padding: 5px;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
 }
 
 .text-distribution {
