Adjusted some MapFilter and TimeLine css

--- a/app/src/app/app.css
+++ b/app/src/app/app.css
@@ -817,3 +817,11 @@ p {
 .no-scrollbar::-webkit-scrollbar {
     display: none;
 }
+
+.timeline-width-collap {
+    width: calc(100vw - 5rem);
+}
+
+.timeline-width-nocollap {
+    width: calc(100vw - 15rem);
+}
